[ADD] cursor pointer + [FIX] invitations box in Friends behind add Friends popin

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,11 +15,9 @@ body {
 }
 
 .border-container {
-  border: 0.1rem solid #fff;
-  border-radius: 1rem;
-  padding: 0.2em;
-  box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #ef1fea,
-    0 0 0.8rem #ef1fea, 0 0 1rem #ef1fea, inset 0 0 1.1rem #ef1fea;
+  border: 0px solid #fff;
+  box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 1rem #ef1fea,
+    0 0 0.8rem #ef1fea, 0 0 0.5rem #ef1fea, inset 0 0 0.7rem #ef1fea;
 }
 
 .from-very-light-black {
